k3s-userapps/paperless/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  progressDeadlineSeconds: 600
  strategy:
    type:
      Recreate
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/pod: paperless
  template:
    metadata:
      labels:
        app.kubernetes.io/pod: paperless
    spec:
      volumes:
        - name: paperless
          persistentVolumeClaim:
            claimName: paperless
      containers:
        - image: 'docker.io/library/redis:8'
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /data
              name: paperless
              subPath: redis
          livenessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            tcpSocket:
              port: 6379
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 15
        - image: 'ghcr.io/paperless-ngx/paperless-ngx:3.2.1'
          name: paperless
          ports:
            - containerPort: 8000
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless
              subPath: data
            - mountPath: /usr/src/paperless/media
              name: paperless
              subPath: media
            - mountPath: /usr/src/paperless/export
              name: paperless
              subPath: export
            - mountPath: /usr/src/paperless/consume
              name: paperless
              subPath: consume
          livenessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 15
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
            successThreshold: 1
            failureThreshold: 3
