k3s-userapps/paperless/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless
  namespace: paperless
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      pod: paperless
  template:
    metadata:
      labels:
        pod: paperless
    spec:
      volumes:
        - name: paperless
          persistentVolumeClaim:
            claimName: paperless
      containers:
        - image: 'docker.io/library/redis:7'
          name: redis
          ports:
            - containerPort: 6379
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /data
              name: paperless
              subPath: redis
        - image: 'ghcr.io/paperless-ngx/paperless-ngx:2.11.2'
          name: paperless
          ports:
            - containerPort: 8000
              protocol: TCP
              name: "http"
          volumeMounts:
            - mountPath: /usr/src/paperless/data
              name: paperless
              subPath: data
            - mountPath: /usr/src/paperless/media
              name: paperless
              subPath: media
            - mountPath: /usr/src/paperless/export
              name: paperless
              subPath: export
            - mountPath: /usr/src/paperless/consume
              name: paperless
              subPath: consume
