k3s-userapps/paperless/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
spec:
  internalTrafficPolicy: Cluster
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    pod: paperless
  type: ClusterIP
