k3s-userapps/paperless/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme-issuer
    gethomepage.dev/enabled: "true"
    gethomepage.dev/href: "https://paperless.kirillorlov.pro"
    gethomepage.dev/group: Apps
    gethomepage.dev/name: Paperless
    gethomepage.dev/icon: paperless.png
    gethomepage.dev/pod-selector: "app.kubernetes.io/pod=paperless"
  name: paperless
  namespace: paperless
spec:
  rules:
  - host: paperless.kirillorlov.pro
    http:
      paths:
      - backend:
          service:
            name: paperless
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - paperless.kirillorlov.pro
    secretName: paperless-tls
